Looks like the homepage is just about done. Fixed the login and register links. Working on carousel behavior on small screens.

--- a/concordia/static/css/base.css
+++ b/concordia/static/css/base.css
@@ -256,7 +256,7 @@ input {
     height: auto;
 }
 
-.nav-secondary {
+div.nav-secondary {
     position: absolute;
     right: 1.5rem;
     top: 1.5rem;
@@ -299,18 +299,6 @@ input {
   left: -4rem;
 }
 
-/*.img-header {
-
-  background-color: rgba(51,51,51,.35);
-  background-image: url("../img/volunteer-header-one-crop.jpg");
-  background-blend-mode:overlay;
-  background-size: cover, 100% auto;
-  background-position: center 20%;
-  height: 28.125rem;
-  max-height: 28.125rem;
-  background-attachment: scroll;
-}*/
-
 .carousel {
     max-height: 30rem;
     overflow-y: hidden;
@@ -322,11 +310,12 @@ input {
     display: block;
     position: absolute;
     top: 2rem;
-    margin-left: 2.5rem;
+    margin-left: 3rem;
 }
 
 .carousel-item img {
-    overflow-y: hidden;
+    min-width: 100%;
+    overflow: hidden;
     align-self: flex-end !important;
 }
 
@@ -536,6 +525,8 @@ input {
     .home-blogpost { margin-bottom: 1rem; }
     .border-bottom-artifacts { border-bottom: solid 0px transparent; }
     .border-left-home-contribute { border-left: solid 0px transparent; }
+    .container-fluid.px-default { padding-left: 0; padding-right: 0; }
+    .carousel-text { top: 1rem; }
 }
 
 .col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
@@ -566,6 +557,7 @@ input {
 
 .btn-outline-primary:hover {
     border-color: var(--primary-color-hover);
+    background-color: transparent;
     color: var(--primary-color-hover);
 }
 
@@ -588,12 +580,30 @@ input {
 
 .btn-outline-secondary:hover {
     border-color: var(--secondary-color-hover);
+    background-color: transparent;
     color: var(--secondary-color-hover);
 }
 
 .btn-default {
     background-color: var(--bg-darkest-gray);
     border-color: var(--bg-darkest-gray);
+    color: var(--text-color-offwhite);
+}
+
+.btn-default:hover {
+    background-color: var(--bg-offblack);
+    border-color: var(--bg-offblack);
+    color: var(--text-color-offwhite);
+}
+
+.btn-outline-default {
+    border-color: var(--bg-darkest-gray);
+    color: var(--text-color-offwhite);
+}
+
+.btn-outline-default:hover {
+    border-color: var(--bg-darkest-gray);
+    background-color: transparent;
     color: var(--text-color-offwhite);
 }
 
